被嘲笑名字太low，修改一下

--- a/admin-service/ironman/pom.xml
+++ b/admin-service/ironman/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.awesome</groupId>
-    <artifactId>demo</artifactId>
+    <artifactId>ironman</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>hello</name>
