添加spring boot admin sever监控服务

--- a/admin-service/auth/pom.xml
+++ b/admin-service/auth/pom.xml
@@ -52,6 +52,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <!--用于查看监控日志-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!--日志追踪-->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
