--- a/admin-service/monitor/src/main/resources/application.yml
+++ b/admin-service/monitor/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: admin-server
+  security:
+    user:
+      name: admin
+      password: admin
 server:
   port: 8001
 eureka:
