--- a/admin-service/pom.xml
+++ b/admin-service/pom.xml
@@ -22,6 +22,7 @@
         <module>auth</module>
         <module>ironman</module>
         <module>monitor</module>
+        <module>gateway</module>
     </modules>
 
 </project>
